First commit for Arabic version

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ lightbox: true # Lightbox images allow a reader to click to see a larger version
 
 babelquarto:
   languagecodes:
+  - name: ar
+    text: "Version in ar"
   - name: vn
     text: "Tiếng Việt"
   - name: fr
@@ -32,8 +34,10 @@ babelquarto:
     text: "English"
 
   mainlanguage: 'en'
-  languages: ['fr', 'es', 'vn', 'jp', 'pt', 'tr', 'ru']  #'de'  fr
+  languages: ['fr', 'es', 'vn', 'jp', 'pt', 'tr', 'ru', 'ar']
 
+
+title-ar: "Title in Arabic"
 title-vn: "Cẩm nang dịch tễ học với R"
 title-fr: "Le Epi R Handbook"
 title-es: "EpiRhandbook en español"
@@ -92,6 +96,7 @@ book:
 
   # ABOUT BOOK
   - part: "About this book"
+    part-ar: "Your language translation here"
     part-vn: "Về cuốn sách này" 
     part-fr: "À propos de ce livre"
     part-es: "Acerca de este libro"
@@ -106,6 +111,7 @@ book:
 
   # BASICS
   - part: "Basics"
+    part-ar: "Your language translation here"
     part-vn: "Nhập môn về R"
     part-fr: "Les bases de R"
     part-es: "Aspectos básicos"
@@ -123,6 +129,7 @@ book:
 
   # DATA MANAGEMENT
   - part: "Data Management"
+    part-ar: "Your language translation here"  
     part-vn: "Quản lý dữ liệu"
     part-fr: "Gestion des données"
     part-es: "Gestión de datos"
@@ -144,6 +151,7 @@ book:
 
   # ANALYSIS
   - part: "Analysis"
+    part-ar: "Your language translation here"  
     part-vn: "Phân tích dữ liệu"
     part-fr: "Analyse"
     part-es: "Análisis"
@@ -168,6 +176,7 @@ book:
 
   # DATA VIZ
   - part: "Data Visualization"
+    part-ar: "Your language translation here"  
     part-vn: "Trực quan hóa dữ liệu"
     part-fr: "Visualisation des données"
     part-es: "Visualización de datos"
@@ -193,6 +202,7 @@ book:
 
   # REPORTS AND DASHBOARDS
   - part: "Reports and dashboards"
+    part-ar: "Your language translation here"  
     part-vn: "Báo cáo và dashboards"
     part-fr: "Rapports et tableaux de bord"
     part-es: "Informes y Dashboards"
@@ -209,6 +219,7 @@ book:
 
   # MISCELLANEOUS
   - part: "Miscellaneous"
+    part-ar: "Your language translation here"  
     part-vn: "Các chủ điểm khác"
     part-fr: "Autres sujets"
     part-es: "Miscelánea"
