update corresponding language lead

--- a/.github/workflows/create_pr_on_pr.yml
+++ b/.github/workflows/create_pr_on_pr.yml
@@ -103,15 +103,15 @@ jobs:
             if [ "$lang" = "vn" ]; then
               checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             elif [ "$lang" = "fr" ]; then
-              checkboxes="$checkboxes @nsbatra, please check the box when you finish"
+              checkboxes="$checkboxes @oliviabboyd, please check the box when you finish"
             elif [ "$lang" = "es" ]; then
-              checkboxes="$checkboxes @robcrystalornelas, please check the box when you finish"
+              checkboxes="$checkboxes @amateo250, please check the box when you finish"
             elif [ "$lang" = "jp" ]; then
               checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             elif [ "$lang" = "tr" ]; then
               checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             elif [ "$lang" = "pt" ]; then
-              checkboxes="$checkboxes @ntluong95, please check the box when you finish"
+              checkboxes="$checkboxes @Luccan97, please check the box when you finish"
             elif [ "$lang" = "ru" ]; then
               checkboxes="$checkboxes @ntluong95, please check the box when you finish"
             fi
