update list of the lead translator

--- a/.github/workflows/create_pr_on_pr.yml
+++ b/.github/workflows/create_pr_on_pr.yml
@@ -102,11 +102,11 @@ jobs:
           case "$lang" in
 
             "vn") checkboxes="$checkboxes @ntluong95, please check the box when you finish" ;;
-            "fr") checkboxes="$checkboxes @nsbatra, please check the box when you finish" ;;
-            "es") checkboxes="$checkboxes @robcrystalornelas, please check the box when you finish" ;;
+            "fr") checkboxes="$checkboxes @oliviabboyd, please check the box when you finish" ;;
+            "es") checkboxes="$checkboxes @amateo250, please check the box when you finish" ;;
             "jp") checkboxes="$checkboxes @ntluong95, please check the box when you finish" ;;
             "tr") checkboxes="$checkboxes @ntluong95, please check the box when you finish" ;;
-            "pt") checkboxes="$checkboxes @ntluong95, please check the box when you finish" ;;
+            "pt") checkboxes="$checkboxes @Luccan97, please check the box when you finish" ;;
             "ru") checkboxes="$checkboxes @ntluong95, please check the box when you finish" ;;
           esac
 
