Initial Quarto page created

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -206,6 +206,7 @@ book:
     - new_pages/reportfactory.qmd #done
     - new_pages/flexdashboard.qmd #done
     - new_pages/shiny_basics.qmd #done
+    - new_pages/quarto.qmd #done
 
   # MISCELLANEOUS
   - part: "Miscellaneous"
